test/types/sync/vass/ref-sync-2.good
ref-sync-2.chpl:5: error: value from coercion passed to ref formal 'FORMAL'
ref-sync-2.chpl:7: note: to function 'MYPROC' defined here
